--- a/week5/tutorial2.ipynb
+++ b/week5/tutorial2.ipynb
@@ -1596,7 +1596,7 @@
     "flood_map_vector = flood_map_vector.loc[~flood_map_vector['band_data'].isna()].reset_index(drop=True)\n",
     "\n",
     "# and turn them into squares again:\n",
-    "flood_map_vector.geometry= shapely.buffer(flood_map_vector.geometry,radius=100/2,cap_style='square').values"
+    "flood_map_vector.geometry= shapely.buffer(flood_map_vector.geometry,distance=100/2,cap_style='square').values"
    ]
   },
   {
