--- a/week5/tutorial1.ipynb
+++ b/week5/tutorial1.ipynb
@@ -1395,6 +1395,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you have seen from the `value_counts` function, there are quite a few buildings with only very few tags. You could either consider to not include them in your plot at all (for example by using the `isin` function or the `query` function, see also [here](https://stackoverflow.com/questions/12096252/use-a-list-of-values-to-select-rows-from-a-pandas-dataframe)), or rename them, similar to how you named the natural land cover classes for the land-use map. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "vF6WJ9_k47DU"
    },
