--- a/_sources/week6/tutorial1.ipynb
+++ b/_sources/week6/tutorial1.ipynb
@@ -1234,7 +1234,7 @@
       },
       "outputs": [],
       "source": [
-        "word_filter = ['co', 'https']\n",
+        "word_filter = ['co', 'http']\n",
         "\n",
         "filtered_words = []\n",
         "filtered_count = []\n",
