--- a/_sources/week1/tutorial3.ipynb
+++ b/_sources/week1/tutorial3.ipynb
@@ -1503,7 +1503,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfg.mean()"
+    "dfg.mean(numeric_only=True)"
    ]
   },
   {
@@ -1519,7 +1519,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfg.aggregate(['mean', 'sum', 'count'])"
+    "dfg[['Time','Distance']].aggregate(['mean', 'sum', 'count'])"
    ]
   },
   {
@@ -1555,7 +1555,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.agg(['mean', 'min', 'count', num_range])"
+    "df[['Time','Distance']].agg(['mean', 'min', 'count', num_range])"
    ]
   },
   {
