fix groupby issue

--- a/week1/tutorial3.ipynb
+++ b/week1/tutorial3.ipynb
@@ -691,16 +691,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Adding/Removing Rows"
+    "### Removing Rows"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You won't often be adding rows to a dataframe manually (you'll usually add rows through concatenating/joining - that's coming up next). You can add/remove rows of a dataframe in two ways:\n",
-    "1. Use `.append()` to add rows\n",
-    "2. Use `.drop()` to drop rows"
+    "You can remove rows of a dataframe through the use of  `.drop()` to drop rows."
    ]
   },
   {
@@ -709,27 +707,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's add a new row to the bottom of this dataframe:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "another_row = pd.DataFrame([[\"12 Oct 2019, 00:10:57\", \"Morning Ride\", \"Ride\",\n",
-    "                             2331, 12.67, \"Washed and oiled bike last night\"]],\n",
-    "                           columns = df.columns,\n",
-    "                           index = [33])\n",
-    "df = df.append(another_row)\n",
     "df"
    ]
   },
