--- a/_sources/week4/lecture.ipynb
+++ b/_sources/week4/lecture.ipynb
@@ -2,91 +2,89 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "19ad8c09",
+   "id": "7f0cd056",
    "metadata": {},
    "source": [
-    "# Lecture: Earth Observation & Google Earth Engine\n",
+    "# Lecture: Big Data in the public domain\n",
     "\n",
-    "This week we will focus on what we can do with earth observation data and learn how to use the google earth engine to unleash the potential of earth observation data.\n",
+    "This week we will focus on the large amount of data available in the public domain that we can utilize within our research in sustainability sciences.\n",
     "\n",
-    "`````{admonition} Learning objectives week 4\n",
+    "`````{admonition} Learning objectives week 5\n",
     ":class: important\n",
-    "- Gain a basic understanding of the Google Earth Engine.\n",
-    "- Understand and know how you can use the Google Earth engine in Python. \n",
-    "- Understand the differences between supervised and unsupervised learning\n",
-    "- Know how to apply a supervised classification algorithm. \n",
-    "- Understand how droughts can be detected through remote sensing.\n",
+    "- Understand what type of data is available.\n",
+    "- Understand how licensing works.\n",
+    "- Know how to access OpenStreetMap and perform basic spatial analysis on this data.\n",
+    "- Know how to combine different open-access spatial datasets to perform a natural hazards risk assessment. \n",
     "`````\n",
     "\n",
-    "## Supervised learning\n",
-    "Supervised learning uses a training set to teach models to yield the desired output. This training dataset includes inputs and correct outputs, which allow the model to learn over time. The algorithm measures its accuracy through the loss function, adjusting until the error has been sufficiently minimized.\n",
+    "## Overview of data sources\n",
+    "There are many places on online where we can find large amounts of public data to be used within our discipline. Below we highlight a few of the most used data sources.\n",
     "\n",
-    "Supervised learning can be separated into two types of problems when data mining—classification and regression:\n",
+    "- [**Google Earth Engine Data Catalogue**](https://developers.google.com/earth-engine/datasets).Earth Engine's public data archive includes more than forty years of historical imagery and scientific datasets, updated and expanded daily. \n",
+    "- [**Copernicus Climate Data Store**](https://cds.climate.copernicus.eu/#!/home). CDS datasets include observations, historical climate data records, estimates of Essential Climate Variables (ECVs) derived from Earth observations, global and regional climate reanalyses of past observations, seasonal forecasts and climate projections. Access to data is open, free and unrestricted.\n",
+    "- [**Our World in Data**](https://ourworldindata.org/). Our World in Data (OWID) is a scientific online publication that focuses on large global problems such as poverty, disease, hunger, climate change, war, existential risks, and inequality.\n",
+    "- [**Worldpop**](https://www.worldpop.org/). Open access spatial demographic datasets built using transparent approaches.\n",
+    "- [**CMIP6**](https://www.wcrp-climate.org/about-wcrp/wcrp-overview). Coupled Model Intercomparison Project Phase 6. The objective of CMIP is to better understand past, present and future climate changes arising from natural, unforced variability or in response to changes in radiative forcing in a multi-model context. This understanding includes assessments of model performance during the historical period and quantifications of the causes of the spread in future projections. An important goal of CMIP is to make the multi-model output publicly available in a standardized format.\n",
+    "- [**OpenStreetMap**](https://www.openstreetmap.org/). A  free, editable map of the whole world that is being built by volunteers largely from scratch and released with an open-content license.\n",
+    "- [**ThinkHazard**](https://thinkhazard.org/en/). ThinkHazard! provides a general view of the hazards, for a given location. The hazard levels provided are based on published hazard data, provided by a range of private, academic and public organizations.\n",
+    "- [**Eurostat**](https://ec.europa.eu/eurostat). Statistics and data on Europe. Both tabular and spatially explicit.\n",
+    "- [**EM-DAT**](https://www.emdat.be/).EM-DAT contains essential core data on the occurrence and effects of over 22,000 mass disasters in the world from 1900 to the present day. \n",
+    "- [**IPUMS**](https://www.ipums.org/). IPUMS provides census and survey data from around the world integrated across time and space.\n",
+    "- [**GADM**](https://gadm.org/). GADM provides maps and spatial data for all countries and their sub-divisions. \n",
+    "- [**Global Flood Database**](https://global-flood-database.cloudtostreet.ai/). The Global Flood Database contains maps of the extent and temporal distribution of 913 flood events occurring between 2000-2018.\n",
     "\n",
-    "- **Classification** uses an algorithm to accurately assign test data into specific categories. It recognizes specific entities within the dataset and attempts to draw some conclusions on how those entities should be labeled or defined. Common classification algorithms are linear classifiers, support vector machines (SVM), decision trees, k-nearest neighbor, and random forest, which are described in more detail below.\n",
+    "## Licensing of data in the public domain\n",
+    "The most common license for public data is the Creative Commons license. Creative Commons licenses give everyone from individual creators to large institutions a standardized way to grant the public permission to use their creative work under copyright law. From the reuser’s perspective, the presence of a Creative Commons license on a copyrighted work answers the question, “What can I do with this work?” \n",
     "\n",
-    "- **Regression** is used to understand the relationship between dependent and independent variables. It is commonly used to make projections, such as for sales revenue for a given business. Linear regression, logistical regression, and polynomial regression are popular regression algorithms.\n",
+    "You can find all the information about the Creative Commons license [here](https://creativecommons.org/about/cclicenses/).\n",
     "\n",
-    "## Supervised learning algorithms\n",
-    "Various algorithms and computation techniques are used in supervised machine learning processes. We already discussed **Random Forests** and **Neural Networks** in detail during the lectures. Below you can find an overview of some of the other algorithms that you can apply within our tutorial. \n",
+    "## FAIR - principles\n",
+    "The FAIR principles constitute a set of guidelines for effective data management, formally introduced in a pivotal 2016 paper authored by a collaborative consortium of scientists and organizations, [published in the journal Scientific Data](https://www.nature.com/articles/sdata201618). FAIR stands for  **F**indability, **A**ccessibility, **I**nteroperability, and **R**euse. These principles prioritize ensuring that data is easily discoverable, accessible, interoperable, and reusable. At its core, the FAIR framework seeks to address the challenges posed by the ever-expanding volume and complexity of data, coupled with the accelerating pace at which new data is generated. Especially when dealing with big and publicly accessible data, a clear set of rules and principles are essential to ensure the reproducability of your work.  \n",
     "\n",
-    "**Naive Bayes**\n",
-    "Naive Bayes is classification approach that adopts the principle of class conditional independence from the Bayes Theorem. This means that the presence of one feature does not impact the presence of another in the probability of a given outcome, and each predictor has an equal effect on that result. There are three types of Naïve Bayes classifiers: Multinomial Naïve Bayes, Bernoulli Naïve Bayes, and Gaussian Naïve Bayes. This technique is primarily used in text classification, spam identification, and recommendation systems.\n",
+    "The acronym FAIR encapsulates a set of principles that extend beyond mere data organization; they underscore the necessity for machine-actionability. As our dependence on computational systems continues to intensify, the FAIR principles emphasize the importance of enabling these systems to autonomously discover, access, interoperate, and reuse data with minimal human intervention. This distinctive feature ensures that the principles remain relevant in the face of evolving technological landscapes and the increasing reliance on automated processes in data management.\n",
     "\n",
-    "**Support vector machine (SVM)**\n",
-    "A support vector machine is a popular supervised learning model developed by Vladimir Vapnik, used for both data classification and regression. That said, it is typically leveraged for classification problems, constructing a hyperplane where the distance between two classes of data points is at its maximum. This hyperplane is known as the decision boundary, separating the classes of data points (e.g., oranges vs. apples) on either side of the plane.\n",
+    "`````{admonition} The FAIR-principles\n",
+    ":class: tip\n",
+    "**To be Findable**:\n",
     "\n",
-    "**K-nearest neighbor**\n",
-    "K-nearest neighbor, also known as the KNN algorithm, is a non-parametric algorithm that classifies data points based on their proximity and association to other available data. This algorithm assumes that similar data points can be found near each other. As a result, it seeks to calculate the distance between data points, usually through Euclidean distance, and then it assigns a category based on the most frequent category or average.\n",
+    "F1. (meta)data are assigned a globally unique and persistent identifier\n",
     "\n",
-    "Its ease of use and low calculation time make it a preferred algorithm by data scientists, but as the test dataset grows, the processing time lengthens, making it less appealing for classification tasks. KNN is typically used for recommendation engines and image recognition.\n",
+    "F2. data are described with rich metadata (defined by R1 below)\n",
     "\n",
-    "## Unsupervised learning\n",
-    "Unsupervised learning uses machine learning algorithms to analyze and cluster unlabeled data sets. These algorithms discover hidden patterns in data without the need for human intervention (hence, they are “unsupervised”).\n",
+    "F3. metadata clearly and explicitly include the identifier of the data it describes\n",
     "\n",
-    "Unsupervised learning models are used for three main tasks: clustering, association and dimensionality reduction:\n",
+    "F4. (meta)data are registered or indexed in a searchable resource\n",
     "\n",
-    "- **Clustering** is a data mining technique for grouping unlabeled data based on their similarities or differences. For example, K-means clustering algorithms assign similar data points into groups, where the K value represents the size of the grouping and granularity. This technique is helpful for market segmentation, image compression, etc.\n",
-    "- **Association** is another type of unsupervised learning method that uses different rules to find relationships between variables in a given dataset. These methods are frequently used for market basket analysis and recommendation engines, along the lines of “Customers Who Bought This Item Also Bought” recommendations.\n",
-    "- **Dimensionality** reduction is a learning technique used when the number of features  (or dimensions) in a given dataset is too high. It reduces the number of data inputs to a manageable size while also preserving the data integrity. Often, this technique is used in the preprocessing data stage, such as when autoencoders remove noise from visual data to improve picture quality.\n",
+    "**To be Accessible**:\n",
     "\n",
-    "## The main differences between supervised and unsupervised learning: Labeled data\n",
+    "A1. (meta)data are retrievable by their identifier using a standardized communications protocol\n",
     "\n",
-    "The main distinction between the two approaches is the use of labeled datasets. To put it simply, supervised learning uses labeled input and output data, while an unsupervised learning algorithm does not.\n",
+    "A1.1 the protocol is open, free, and universally implementable\n",
     "\n",
-    "In supervised learning, the algorithm “learns” from the training dataset by iteratively making predictions on the data and adjusting for the correct answer. While supervised learning models tend to be more accurate than unsupervised learning models, they require upfront human intervention to label the data appropriately. For example, a supervised learning model can predict how long your commute will be based on the time of day, weather conditions and so on. But first, you’ll have to train it to know that rainy weather extends the driving time.\n",
+    "A1.2 the protocol allows for an authentication and authorization procedure, where necessary\n",
     "\n",
-    "Unsupervised learning models, in contrast, work on their own to discover the inherent structure of unlabeled data. Note that they still require some human intervention for validating output variables. For example, an unsupervised learning model can identify that online shoppers often purchase groups of products at the same time. However, a data analyst would need to validate that it makes sense for a recommendation engine to group baby clothes with an order of diapers, applesauce and sippy cups.\n",
+    "A2. metadata are accessible, even when the data are no longer available\n",
     "\n",
-    "## Other key differences between supervised and unsupervised learning\n",
+    "**To be Interoperable**:\n",
     "\n",
-    "**Goals**: In supervised learning, the goal is to predict outcomes for new data. You know up front the type of results to expect. With an unsupervised learning algorithm, the goal is to get insights from large volumes of new data. The machine learning itself determines what is different or interesting from the dataset.\n",
+    "I1. (meta)data use a formal, accessible, shared, and broadly applicable language for knowledge representation.\n",
     "\n",
-    "**Applications**: Supervised learning models are ideal for spam detection, sentiment analysis, weather forecasting and pricing predictions, among other things. In contrast, unsupervised learning is a great fit for anomaly detection, recommendation engines, customer personas and medical imaging.\n",
+    "I2. (meta)data use vocabularies that follow FAIR principles\n",
     "\n",
-    "**Complexity**: Supervised learning is a simple method for machine learning, typically calculated through the use of statistical software like R or Python. In unsupervised learning, you need powerful tools for working with large amounts of unclassified data. Unsupervised learning models are computationally complex because they need a large training set to produce intended outcomes.\n",
+    "I3. (meta)data include qualified references to other (meta)data\n",
     "\n",
-    "**Drawbacks**: Supervised learning models can be time-consuming to train, and the labels for input and output variables require expertise. Meanwhile, unsupervised learning methods can have wildly inaccurate results unless you have human intervention to validate the output variables.\n",
+    "**To be Reusable**:\n",
     "\n",
-    "## Google Earth Engine\n",
-    "Google Earth Engine is a cloud-based platform for planetary-scale geospatial analysis that brings Google's computational capabilities to bear on a variety of high-impact societal issues including deforestation, drought, disaster, disease, food security, water management, climate monitoring and environmental protection. \n",
+    "R1. meta(data) are richly described with a plurality of accurate and relevant attributes\n",
     "\n",
-    "The Google Earth Engine consists of a multi-petabyte analysis-ready data catalog co-located with a high-performance, intrinsically parallel computation service. It is accessed and controlled through an Internet-accessible application programming interface (API) and an associated web-based interactive development environment (IDE) that enables rapid prototyping and visualization of results.\n",
+    "R1.1. (meta)data are released with a clear and accessible data usage license\n",
     "\n",
-    "The data catalog houses a large repository of publicly available geospatial datasets, including observations from a variety of satellite and aerial imaging systems in both optical and non-optical wavelengths, environmental variables, weather and climate forecasts and hindcasts, land cover, topographic and socio-economic datasets. All of this data is preprocessed to a ready-to-use but information-preserving form that allows efficient access and removes many barriers associated with data management.\n",
+    "R1.2. (meta)data are associated with detailed provenance\n",
     "\n",
-    "Users can access and analyze data from the public catalog as well as their own private data using a library of operators provided by the Earth Engine API. These operators are implemented in a large parallel processing system that automatically subdivides and distributes computations, providing high-throughput analysis capabilities. Users access the API either through a thin client library or through a web-based interactive development environment built on top of that client library.\n",
+    "R1.3. (meta)data meet domain-relevant community standards\n",
+    "`````\n",
     "\n",
-    "## How to gain access to the Google Earth Engine\n",
-    "To be able to use the Google Earth Engine during the tutorial, we will need to sign up.\n",
-    "\n",
-    "The first step is to register. To do so, you have to go to the [Sign-up page](https://signup.earthengine.google.com/#!/). You can use your university account to register. \n",
-    "\n",
-    "\n",
-    "### Sources\n",
-    "\n",
-    "- [IBM Supervised Learning Explained](https://www.ibm.com/cloud/learn/supervised-learning)\n",
-    "- [IBM Supervised vs Unsupervised Learning Explained](https://www.ibm.com/cloud/blog/supervised-vs-unsupervised-learning)"
+    "You can read more about the FAIR-principes [here](https://www.go-fair.org/fair-principles/)"
    ]
   }
  ],
