--- a/_sources/week2/tutorial2.ipynb
+++ b/_sources/week2/tutorial2.ipynb
@@ -82,7 +82,9 @@
     "\n",
     "[**NumPy**](https://numpy.org/doc/stable/) is a Python library that provides a multidimensional array object, various derived objects, and an assortment of routines for fast operations on arrays.\n",
     "\n",
-    "[**Pandas**](https://pandas.pydata.org/docs/) is an open source, BSD-licensed library providing high-performance, easy-to-use data structures and data analysis tools for the Python programming language."
+    "[**Pandas**](https://pandas.pydata.org/docs/) is an open source, BSD-licensed library providing high-performance, easy-to-use data structures and data analysis tools for the Python programming language.\n",
+    "\n",
+    "*We will first need to install these packages in the cell below. Uncomment them to make sure we can pip install them*"
    ]
   },
   {
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "Yog-09VPsrHT"
    },
@@ -111,6 +113,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import random\n",
     "\n",
     "pd.options.mode.chained_assignment = None\n",
     "sns.set_style(\"whitegrid\",{'axes.grid' : True})"
@@ -137,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -182,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "g5y5--2KsrHX",
     "scrolled": true
@@ -226,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "-McgXSi7srHZ"
    },
@@ -246,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "I4D_JWtBsrHa"
    },
@@ -325,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "Cb8CwwCvsrHd"
    },
@@ -424,12 +427,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "id": "TW-XHnQOsrHf"
    },
    "outputs": [],
    "source": [
+    "datanan = datanan.fillna(0)\n",
     "training_data, testing_data = train_test_split(datanan, test_size=0.3, random_state=25)"
    ]
   },
@@ -444,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "id": "n7TwRqqusrHf"
    },
@@ -461,13 +465,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "id": "nGoCjNqssrHg"
    },
    "outputs": [],
    "source": [
-    "rf = RandomForestRegressor(n_estimators = 100, max_features = 'sqrt', max_depth = 3, random_state = 18).fit(x_train, y_train)"
+    "rf = RandomForestRegressor(n_estimators = 75, max_features = 'sqrt', max_depth = 3, random_state = 18).fit(x_train, y_train)"
    ]
   },
   {
@@ -525,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "id": "5E0QlyZgsrHi"
    },
@@ -683,7 +687,7 @@
    },
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 8:</b> Try another parameter space but think about the time the model needs to run! The higher the number of trees and the depth, the longer it takes to train the model. You can copy the code from the previous cell and change the numbers over which the for loop iterates, i.e. the numbers in [75,150] and [5,7,9]. Because of time, I would advice not to try more than 4 models. Report the hypermeters you tried and the R2 score. </div>"
+    "<b>Question 8:</b> Try another parameter space but think about the time the model needs to run! The higher the number of trees and the depth, the longer it takes to train the model. You can copy the code from the previous cell and change the numbers over which the for loop iterates, i.e. the numbers in [75,150] and [4,7,10]. Because of time, I would advice not to try more than 4 models. Report the hypermeters you tried and the R2 score. </div>"
    ]
   },
   {
@@ -694,6 +698,31 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's visualize how your best model performs. Fill in the hyperparameters that you found. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf = RandomForestRegressor(n_estimators = , max_features = 'sqrt', max_depth = , random_state = 18).fit(x_train, y_train) #fill in hyperparameters\n",
+    "\n",
+    "y_pred = rf.predict(x_test)\n",
+    "fst = 12\n",
+    "plt.plot(y_test,'bo')\n",
+    "plt.plot(y_pred,'ro')\n",
+    "plt.legend(['Observed','Predicted'], fontsize = fst)\n",
+    "plt.xticks(fontsize=fst)\n",
+    "plt.yticks(fontsize=fst)\n",
+    "plt.ylabel('ENERGYCOST',fontsize=fst)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -768,7 +797,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.8.20"
   },
   "vscode": {
    "interpreter": {
