--- a/_sources/week2/tutorial1.ipynb
+++ b/_sources/week2/tutorial1.ipynb
@@ -1011,8 +1011,7 @@
    },
    "outputs": [],
    "source": [
-    "#dataOLS = pd.read_csv(r\"https://github.com/ElcoK/BigData_AED/raw/main/week2/usadataforOLS_updatejan25.csv\", sep = ',', encoding = 'unicode_escape')\n",
-    "dataOLS = pd.read_csv(r\"usadataforOLS_updatejan25.csv\", sep = ',', encoding = 'unicode_escape')"
+    "dataOLS = pd.read_csv(r\"https://github.com/ElcoK/BigData_AED/raw/main/week2/usadataforOLS.csv\", sep = ',', encoding = 'unicode_escape')"
    ]
   },
   {
